--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -5,4 +5,25 @@
     Gustavo Roo Gonzalez, and Gunner Bradley
     Description: Html file for the contact component.
 -->
-<p>contact works!</p>
+
+<div class="center">
+  <h1 class="contact-container">
+    Check us out online or come see us
+    <br />
+    at our awesome Omaha metro location!
+  </h1>
+
+  <h2>Repair Shop</h2>
+  <p>
+    123 Main Street
+    <br />
+    Bellevue, NE, 68110
+  </p>
+
+  <br />
+  <h2>Contact</h2>
+  <p>Direct: 123-456-7890</p>
+  <p>Toll-free: 1-800-123-4567</p>
+  <p>Fax: 987-6543-210</p>
+  <p>Email: <a href="mailto:bob@bcrs.com">bob@bcrs.com</a></p>
+</div>
