about page styling tweaks

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -14,7 +14,7 @@
 >
   <div fxLayout="column" fxLayoutAlign="center start">
     <h1 class="about-main-title">
-      <span>Bob's</span><br />Computer <br />Repair Shop
+      <span>Bob's</span><br />Computer Repair Shop
     </h1>
   </div>
   <div fxLayout="column" fxLayoutAlign="center start" class="about-main-body">
