--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /*
 =======================================
 // Title: Bob’s Computer Repair Shop
-// Date: 04 April 2022
+// Date: 28 April 2022
 // Authors: Evan Durkin, Keith Hall,
 // Gustavo Roo Gonzalez, and Gunner Bradley
 // Description: Global css styles for BCR Shop App.
@@ -32,7 +32,7 @@ html, body { height: 100%; }
   -webkit-text-fill-color: transparent;
   background-size: 200% 100%;
   background-position: 100%;
-  transition: background-position 275ms ease;
+  transition: background-position .5s ease;
 }
 
 .logo-navbar:hover {
@@ -74,6 +74,50 @@ html, body { height: 100%; }
 .mat-toolbar-row, .mat-toolbar-single-row {
   align-items: flex-end;
   height: fit-content;
+}
+
+.dashboard-header {
+  font-family: 'Aldrich', sans-serif;
+  font-size: 24px;
+  color: white;
+  margin-left: 20px;
+  display: inline-block;
+}
+
+/*********** dashboard links ***********/
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0 0 0 60px;
+  overflow: hidden;
+  background-color: #5b5b5b;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px 25px;
+  text-decoration: none;
+}
+
+li a:hover:not(.active) {
+  background-color: rgba(102, 102, 102, .4);
+  cursor: pointer;
+}
+
+.active {
+  background-color: #5b5b5b;
+}
+
+.active:hover {
+  cursor: pointer;
+  background-color: rgba(102, 102, 102, .4);
 }
 
 
