--- a/src/app/shared/forms/verify-username/verify-username.component.css
+++ b/src/app/shared/forms/verify-username/verify-username.component.css
@@ -1,31 +1,29 @@
-
-/*
-* Main container styling
+ /*
+=======================================
+// Title: Bob’s Computer Repair Shop
+// Date: 27 April 2022
+// Authors: Evan Durkin, Keith Hall,
+// Gustavo Roo Gonzalez, and Gunner Bradley
+// Description: CSS file for the verify-user component.
+=======================================
 */
-.main-container {
-  margin-top: 8%;
+
+.cardContainer {
+  height: 100%;
+}
+mat-card {
+  margin: 10% 20% 10% 20%;
+  width: 22%;
+  height: 78%;
+  margin: auto;
+}
+.accent {
+  font-size: 24px;
+  font-weight: 400;color: #568e67;
+  font-family:Aldrich;
+}
+.subtitle-accent {
+font-family: Karla;
 }
 
-/*
-* Registration form container styling
-*/
-.verification-form {
-  width: 50%;
-  margin-left: 16%;
-}
 
-.mat-headline {
- text-align: center;
- font-size: 35px;
- font-weight: lighter;
-}
-
-/*
-* Styling for smaller screen
-*/
-@media only screen and (max-width: 780px) {
-  .verification-form {
-    width: 80%;
-    margin-left: 10%;
-  }
-}
