adding new error components

--- a/src/app/shared/standard-layout/standard-layout.component.html
+++ b/src/app/shared/standard-layout/standard-layout.component.html
@@ -63,7 +63,7 @@
   <!-- footer -->
   <div fxFlex>
     <footer class="footer">
-      <mat-toolbar class="footer-content">
+      <mat-toolbar class="footer-content" style="padding: 20px;">
         <p style="margin-left: 2em">
           &copy; {{ year | date: "yyyy" }} - Bob's Computer Repair Shop -
           <a href="https://www.bellevue.edu/" class="bu-link" target="_blank">Bellevue University</a>
