--- a/src/app/shared/forms/verify-security-questions/verify-security-questions.component.html
+++ b/src/app/shared/forms/verify-security-questions/verify-security-questions.component.html
@@ -1,1 +1,11 @@
+<!--/*
+=======================================
+// Title: Bob’s Computer Repair Shop
+// Date: 23 April 2022
+// Authors: Evan Durkin, Keith Hall,
+// Gustavo Roo Gonzalez, and Gunner Bradley
+// Description: Html file for the verify-security-questions component.
+=======================================
+*/-->
+
 <p>verify-security-questions works!</p>
