--- a/src/app/pages/not-found/not-found.component.css
+++ b/src/app/pages/not-found/not-found.component.css
@@ -7,3 +7,9 @@
 // Description: Css file for the not-found component.
 =======================================
 */
+
+/* this centers the mat-button on the page */
+.mat-card>:last-child:not(.mat-card-footer), .mat-card-content>:last-child:not(.mat-card-footer) {
+  margin: 20px auto;
+  text-align: -webkit-center;
+  }
