--- a/src/app/shared/standard-layout/standard-layout.component.css
+++ b/src/app/shared/standard-layout/standard-layout.component.css
@@ -7,3 +7,7 @@
 // Description: Css file for the standard-layout component.
 =======================================
 */
+
+.main-content {
+  margin: 5% 7%;
+}
