--- a/src/app/shared/auth-layout/auth-layout.component.css
+++ b/src/app/shared/auth-layout/auth-layout.component.css
@@ -4,7 +4,7 @@
   font-weight: lighter;
 }
 span {
-  font-family: Karla;
+  font-family: 'Karla', sans-serif;
 }
 
 .navbar-container {
@@ -18,7 +18,7 @@ span {
 
 .main-content {
   padding-left: 0px;
-  margin-bottom: 5%;
+  margin: 3% 12%;
 }
 
 .footer-content {
