Server file corrections

--- a/src/app/shared/forms/verify-username/verify-username.component.html
+++ b/src/app/shared/forms/verify-username/verify-username.component.html
@@ -6,7 +6,7 @@
     Description: Html file for the verify-username component.
 -->
 
-<div fxLayout="column" class="cardContainer" style="">
+<div fxLayout="column" class="cardContainer">
   <mat-card class="mat-elevation-z8">
     <h1 style="margin-top:10px" class="accent">Bob's <br />Computer Repair Shop</h1>
     <mat-card-title style="text-align:center;margin-top:27%" class="subtitle-accent">Forgot Password?</mat-card-title>
