--- a/src/app/pages/sign-up/sign-up.component.css
+++ b/src/app/pages/sign-up/sign-up.component.css
@@ -1,14 +1,20 @@
 .signup-main {
   width: 50%;
+  min-width: 750px;
   min-height: 600px;
   padding: 0 0 15px 0;
-  margin: 20px auto;
+  margin: 5% auto;
+  border-radius: 0px;
+  background-color: #f5f5f6;;
 }
 
 .signup-title {
   text-align: center;
-  height: 100%;
-  padding-top: 15px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background-color: #323232;
+  font-size: 26px;
+  margin-bottom: 0;
 }
 
 .mat-tab-group {
@@ -17,6 +23,8 @@
 
 .mat-form-field {
   width: 100%;
+  padding-bottom: 0;
+  margin-bottom: 5px;
 }
 
 .mat-card-actions {
@@ -29,4 +37,20 @@
 
 .spacer {
   height: 50px;
+}
+
+.error-input {
+  background-color: #f5f5f6;
+}
+
+mat-tab-label {
+  margin: 0 25px
+}
+
+mat-label {
+  color: #323232
+}
+
+.mat-tab-group.mat-background-primary > .mat-tab-header .mat-tab-label, .mat-tab-group.mat-background-primary > .mat-tab-link-container .mat-tab-link, .mat-tab-nav-bar.mat-background-primary > .mat-tab-header .mat-tab-label, .mat-tab-nav-bar.mat-background-primary > .mat-tab-link-container .mat-tab-link {
+  margin: 0 30px;
 }
