--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -21,7 +21,7 @@
             style="padding-top: 30px"
           >
             <div fxLayout="column" fxFlex="40%">
-              <mat-form-field appearance="fill">
+              <mat-form-field appearance="fill" class="form-field" style="border-radius: 0px;">
                 <mat-label>First Name</mat-label>
                 <input
                   matInput
@@ -30,7 +30,7 @@
                   fxFlex="50"
                 />
                 <mat-error
-                  class="error"
+                  class="error-input"
                   *ngIf="
                     newUserFormGroup.controls['firstName'].hasError(
                       'required'
@@ -39,11 +39,11 @@
                   >First name is a required field.</mat-error
                 >
               </mat-form-field>
-              <mat-form-field appearance="fill">
+              <mat-form-field appearance="fill" >
                 <mat-label>Last Name</mat-label>
-                <input matInput formControlName="lastName" required />
+                <input matInput formControlName="lastName" required/>
                 <mat-error
-                  class="error"
+                  class="error-input"
                   *ngIf="
                     newUserFormGroup.controls['lastName'].hasError(
                       'required'
@@ -58,7 +58,7 @@
                 <mat-label>Telephone</mat-label>
                 <input matInput formControlName="phoneNumber" required />
                 <mat-error
-                  class="error"
+                  class="error-input"
                   *ngIf="
                     newUserFormGroup.controls['phoneNumber'].hasError(
                       'required'
@@ -71,7 +71,7 @@
                 <mat-label>Email <Address></Address></mat-label>
                 <input matInput formControlName="email" required />
                 <mat-error
-                  class="error"
+                  class="error-input"
                   *ngIf="
                     newUserFormGroup.controls['email'].hasError('required') &&
                     newUserFormGroup.controls['email'].touched
@@ -79,7 +79,7 @@
                   >Email is a required field.</mat-error
                 >
                 <mat-error
-                  class="error"
+                  class="error-input"
                   *ngIf="
                     newUserFormGroup.controls['email'].hasError('email') &&
                     newUserFormGroup.controls['email'].touched
@@ -93,7 +93,7 @@
                 <mat-label>Address Line 1</mat-label>
                 <input matInput formControlName="address1" required />
                 <mat-error
-                  class="error"
+                  class="error-input"
                   *ngIf="
                     newUserFormGroup.controls['address1'].hasError(
                       'required'
@@ -116,7 +116,7 @@
                   <mat-label>City</mat-label>
                   <input matInput formControlName="city" required />
                   <mat-error
-                    class="error"
+                    class="error-input"
                     *ngIf="
                       newUserFormGroup.controls['city'].hasError('required') &&
                       newUserFormGroup.controls['city'].touched
@@ -125,22 +125,22 @@
                   >
                 </mat-form-field>
                 <mat-form-field appearance="fill" fxFlex="15%">
-                  <mat-label>State</mat-label>
+                  <mat-label>ST</mat-label>
                   <input matInput formControlName="state" required />
                   <mat-error
-                    class="error"
+                    class="error-input"
                     *ngIf="
                       newUserFormGroup.controls['state'].hasError('required') &&
                       newUserFormGroup.controls['state'].touched
                     "
-                    >ST REQ</mat-error
+                    >State Req</mat-error
                   >
                 </mat-form-field>
                 <mat-form-field appearance="fill" fxFlex="35%">
                   <mat-label>Zip Code</mat-label>
                   <input matInput formControlName="zip" required />
                   <mat-error
-                    class="error"
+                    class="error-input"
                     *ngIf="
                       newUserFormGroup.controls['zip'].hasError('required') &&
                       newUserFormGroup.controls['zip'].touched
@@ -174,7 +174,7 @@
                   </mat-option>
                 </mat-select>
                 <mat-error
-                  class="error"
+                  class="error-input"
                   *ngIf="
                     newUserFormGroup.controls['securityQuestion1'].hasError(
                       'required'
@@ -194,7 +194,7 @@
                   </mat-option>
                 </mat-select>
                 <mat-error
-                  class="error"
+                  class="error-input"
                   *ngIf="
                     newUserFormGroup.controls['securityQuestion2'].hasError(
                       'required'
@@ -214,7 +214,7 @@
                   </mat-option>
                 </mat-select>
                 <mat-error
-                  class="error"
+                  class="error-input"
                   *ngIf="
                     newUserFormGroup.controls['securityQuestion3'].hasError(
                       'required'
@@ -233,7 +233,7 @@
                   required
                 />
                 <mat-error
-                  class="error"
+                  class="error-input"
                   *ngIf="
                     newUserFormGroup.controls[
                       'securityQuestion1Answer'
@@ -252,7 +252,7 @@
                   required
                 />
                 <mat-error
-                  class="error"
+                  class="error-input"
                   *ngIf="
                     newUserFormGroup.controls[
                       'securityQuestion2Answer'
@@ -271,7 +271,7 @@
                   required
                 />
                 <mat-error
-                  class="error"
+                  class="error-input"
                   *ngIf="
                     newUserFormGroup.controls[
                       'securityQuestion3Answer'
@@ -308,7 +308,7 @@
                   [formControl]="newUserFormGroup.controls['password']"
                 />
                 <mat-error
-                  class="error"
+                  class="error-input"
                   *ngIf="
                     newUserFormGroup.controls['password'].hasError(
                       'required'
@@ -319,7 +319,7 @@
                 </mat-error>
 
                 <mat-error
-                  class="error"
+                  class="error-input"
                   *ngIf="
                     newUserFormGroup.controls.password.hasError('pattern') &&
                     newUserFormGroup.controls.password.touched
