--- a/src/app/pages/security-question-edit/security-question-edit.component.html
+++ b/src/app/pages/security-question-edit/security-question-edit.component.html
@@ -1,27 +1,12 @@
-<div fxLayout="column">
-  <mat-card class="mat-elevation-z8">
-    <mat-card-title>Edit Security Question</mat-card-title>
-    <br/>
-    <form [formGroup]="questionForm" (ngSubmit)="editQuestion()" #questionForm>
-      <mat-card-content>
-        <div fxLayout="column" fxLayoutGap="10px">
-          <mat-form-field>
-            <input matInput [formControl]="questionForm.controls['text']"
-              placeholder="Security question text..." (keydown.enter)="editQuestion()"/>
-              <mat-error class="error" *ngIf="questionForm.controls.text.hasError('required') && questionForm.controls.text.touched">
-                Security question is a required field.
-              </mat-error>
-          </mat-form-field>
-        </div>
-      </mat-card-content>
+<mat-dialog-content fxFlex fxLayout="column" [formGroup]="questionForm">
+  <h2 mat-dialog-title>Edit Security Question</h2>
 
-      <br/>
+  <mat-form-field>
+      <input type="text" placeholder="Question" matInput formControlName="text" [value]="questionData.text"/>
+  </mat-form-field>
 
-      <mat-card-actions layout-align="end">
-        <button mat-stroked-button (click)="cancel()" color="warn">cancel</button>
-        <button mat-stroked-button [disabled]="!questionForm.valid" color="accent">submit</button>
-      </mat-card-actions>
-    </form>
-
-  </mat-card>
-</div>
+  <div mat-dialog-actions align="end">
+    <button mat-button (click)="cancel()">Cancel</button>
+    <button mat-raised-button (click)="editQuestion()"  color="primary">Update</button>
+  </div>
+</mat-dialog-content>
