--- a/src/app/pages/security-question-list/security-question-list.component.html
+++ b/src/app/pages/security-question-list/security-question-list.component.html
@@ -38,7 +38,7 @@
               mat-icon-button
               routerLink="/security-questions/{{ element._id }}"
               (click)="
-                openSecurityQuestionUpdateDialog(element._id, element.text)
+                openSecurityQuestionUpdateDialog(element._id, element)
               "
             >
               <mat-icon class="edit-icon functions-icon">edit</mat-icon>
@@ -58,10 +58,9 @@
       <div fxLayout="column" fxLayoutAlign="center end">
         <button
           mat-button
-          routerLink="/security-questions/"
+          routerLink="/session/security-questions/create"
           class="btn-add-user"
-          style="margin-bottom: 10px"
-        >
+          style="margin-bottom: 10px">
           add +
         </button>
       </div>
