adding styling changes

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -14,7 +14,9 @@
 >
   <div fxLayout="column" fxLayoutAlign="center start">
     <h1 class="about-main-title">
-      <span>Bob's</span><br />Computer Repair Shop
+      <span style="letter-spacing: -4.5pt;">Bob's</span><br/>
+      <span style="font-size: 68px;">Computer</span><br />
+      <span style="font-size: 58px;">Repair Shop</span>
     </h1>
   </div>
   <div fxLayout="column" fxLayoutAlign="center start" class="about-main-body">
