--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -9,16 +9,17 @@
 */
 
 .about-container {
-  margin: 50px auto;
-  color: var(--accent-color);
+  margin: 10% auto;
+  color: #579068;
 }
 
 .about-main-title {
-  width: 500px;
+  width: 425px;
   padding: 175px 0px;
   font-size: 65px;
   line-height: 1em;
-  border-right: 10px solid var(--accent-darker-color);
+  border-right: 10px solid #393939;
+  letter-spacing: -3pt;
 }
 
 .about-main-title span {
@@ -39,5 +40,5 @@
 }
 
 .about-main-body {
-  padding-left: 30px;
+  margin-left: 4em;
 }
