--- a/src/app/pages/sign-in/sign-in.component.css
+++ b/src/app/pages/sign-in/sign-in.component.css
@@ -9,5 +9,68 @@
 */
 
 .sign-in-container {
-margin-top: 17%;
+margin: 30% auto;
+padding: 35px;
+border-radius: 0;
+min-width: 500px;
+max-width: 650px;
+background-color: #323232;
 }
+
+.form-card {
+  background-color: #323232;
+  box-shadow: none;
+}
+
+.error-sign-in {
+  font-family: 'Karla', sans-serif;
+  color: red;
+  background-color: #323232;
+}
+
+.logo-sign-in {
+  text-align: center;
+  font-size: 32px;
+  font-weight: 400;
+  color: #568e67;
+  font-family: 'Aldrich', sans-serif;
+  letter-spacing: -1.5pt;
+}
+
+.sign-in-subtitle {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  color: rgb(243, 241, 241);
+  font-family: 'Karla', sans-serif;
+  margin-bottom: 7px;
+}
+
+.mat-input-element {
+  color: #323232;
+}
+.mat-input-element::placeholder{
+  color: #323232;
+}
+
+.btn-signIn {
+  font-family: 'Aldrich', sans-serif;
+  color: #003716;
+  background-color: #579068;
+  border-radius: 0;
+  font-size: 24px;
+  padding: 5px;
+}
+
+.btn-signIn:hover {
+  background-color: #5fed8a;
+  transition: .5s;
+  cursor: pointer;
+}
+
+.mat-button.mat-primary.mat-button-disabled, .mat-button.mat-accent.mat-button-disabled, .mat-button.mat-warn.mat-button-disabled, .mat-button.mat-button-disabled.mat-button-disabled, .mat-icon-button.mat-primary.mat-button-disabled, .mat-icon-button.mat-accent.mat-button-disabled, .mat-icon-button.mat-warn.mat-button-disabled, .mat-icon-button.mat-button-disabled.mat-button-disabled, .mat-stroked-button.mat-primary.mat-button-disabled, .mat-stroked-button.mat-accent.mat-button-disabled, .mat-stroked-button.mat-warn.mat-button-disabled, .mat-stroked-button.mat-button-disabled.mat-button-disabled {
+  color: #003716;
+}
+
+
+
