--- a/src/styles.css
+++ b/src/styles.css
@@ -216,3 +216,14 @@ li a:hover:not(.active) {
 #form-field {
   border-radius: 0px;
 }
+
+.mat-card:not([class*=mat-elevation-z]) {
+  box-shadow:
+  0px 10px 11px 0px rgb(0 0 0 / 20%),
+  0px 10px 11px 0px rgb(0 0 0 / 14%),
+  0px 1px 3px 0px rgb(0 0 0 / 12%);
+}
+
+.mat-select-value { /* the text of the security question that the user selects */
+  color: black;
+}
