--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -31,7 +31,7 @@
         sign-in
       </button>
       <br/>
-      <a routerLink="/sign-up" class="registerLink">register for an account</a>
+      <a routerLink="/post-session/sign-up" class="registerLink">register for an account</a>
     </div>
     </mat-toolbar>
   </nav>
