--- a/src/app/pages/security-question-list/security-question-list.component.html
+++ b/src/app/pages/security-question-list/security-question-list.component.html
@@ -10,7 +10,7 @@
 
 <div fxLayout="column">
   <!--mat card to hold users configuration table-->
-  <mat-card class="users-list-card">
+  <mat-card class="question-list-card">
     <mat-card-title class="users-title"
       >Security Question Configuration</mat-card-title
     >
