--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -55,7 +55,7 @@
           <td mat-cell *matCellDef="let element">
 
             <button mat-icon-button routerLink="/session/users/{{ element._id }}">
-              <mat-icon color="secondary-icon">edit</mat-icon>
+              <mat-icon color="black" class="functions-icon">edit</mat-icon>
             </button>
             <button
               mat-icon-button
