--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -8,22 +8,22 @@
 
 <div class="center">
   <h1 class="contact-container">
-    Check us out online or come see us
+    Visit our repair shop or contact us
     <br />
-    at our awesome Omaha metro location!
+    to hear more about how we can assist you!
   </h1>
 
-  <h2>Repair Shop</h2>
-  <p>
+  <h2 class="contact-title">Repair Shop</h2>
+  <p class="contact-p">
     123 Main Street
     <br />
     Bellevue, NE, 68110
   </p>
 
   <br />
-  <h2>Contact</h2>
-  <p>Direct: 123-456-7890</p>
-  <p>Toll-free: 1-800-123-4567</p>
-  <p>Fax: 987-6543-210</p>
-  <p>Email: <a href="mailto:bob@bcrs.com">bob@bcrs.com</a></p>
+  <h2 class="contact-title">Contact</h2>
+  <p class="contact-p">Direct: 123-456-7890</p>
+  <p class="contact-p">Toll-free: 1-800-123-4567</p>
+  <p class="contact-p">Fax: 987-6543-210</p>
+  <p class="contact-p">Email: <a href="mailto:bob@bcrs.com" style="color: #568e67;">bob@bcrs.com</a></p>
 </div>
