--- a/src/app/shared/auth-layout/auth-layout.component.css
+++ b/src/app/shared/auth-layout/auth-layout.component.css
@@ -18,7 +18,8 @@ span {
 
 .main-content {
   padding-left: 0px;
-  margin: 3% 12%;
+  padding-bottom: 8%;
+  margin: 2% 12% 5%;
 }
 
 .footer-content {
