--- a/src/app/shared/delete-record-dialog/delete-record-dialog.component.html
+++ b/src/app/shared/delete-record-dialog/delete-record-dialog.component.html
@@ -9,20 +9,16 @@
 */-->
 
 <!-- delete confirmation pop up -->
-<h2 mat-dialog-title>{{ dialogHeader }}</h2>
+<h2 mat-dialog-title class="delete-title">{{ dialogHeader }}</h2>
 
 <div mat-dialog-content>
-  <p>{{ dialogBody }}</p>
-  <small style="color: red"
+  <p class="dialog-text">{{ dialogBody }}</p>
+  <small style="color: red; font-size: 14px;"
     >WARNING: Deleted records cannot be recovered.</small
   >
 </div>
 
-<div mat-dialog-actions>
-  <button mat-raised-button matDialogClose="cancel" cdkFocusInitial>
-    No Thanks
-  </button>
-  <button mat-raised-button matDialogClose="confirm" color="warn">
-    Accept
-  </button>
+<div mat-dialog-actions align="end" class="btns-div">
+  <button mat-button matDialogClose="cancel" class="btn-primary btn-dialog-cancel">cancel</button>
+  <button mat-raised-button matDialogClose="confirm"  class="btn-primary btn-dialog">submit</button>
 </div>
