Added AboutUs Text

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -14,25 +14,31 @@
 >
   <div fxLayout="column" fxLayoutAlign="center start">
     <h1 class="about-main-title">
-      <span style="letter-spacing: -4.5pt;">Bob's</span><br/>
-      <span style="font-size: 68px;">Computer</span><br />
-      <span style="font-size: 58px;">Repair Shop</span>
+      <span style="letter-spacing: -4.5pt">Bob's</span><br />
+      <span style="font-size: 68px">Computer</span><br />
+      <span style="font-size: 58px">Repair Shop</span>
     </h1>
   </div>
   <div fxLayout="column" fxLayoutAlign="center start" class="about-main-body">
     <h2 class="about-subtitle">about us</h2>
     <p class="about-p">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat.
+      Our shop is the place for all your computer repair needs. We also sell
+      computer parts; if you don't see what you're looking for, let us know, and
+      we'll find it for you. Our highly qualified specialists are here to assist
+      you with any problem. We repair computers, tablets, and phones! Call us
+      today or drop by our location for a free quote.
     </p>
     <h2 class="about-subtitle">overview</h2>
     <p class="about-p">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat.
+      As with every business, we must stay up to date with the times and
+      technology, which led to the development of an application whose main aim
+      is to check out clients. This application will let our technicians service
+      our customers while collecting data on how frequently services are
+      performed. Users can create a profile to log in, check out a customer and
+      create an invoice. Users can also customize their security questions and
+      answers for each profile, making password resets quick and straightforward
+      if necessary. The administrator job will have access to data reports that
+      show how many services have been billed at the moment.
     </p>
   </div>
 </div>
