sign-up stylings

--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -24,6 +24,7 @@
                 <mat-label>First Name</mat-label>
                 <input
                   matInput
+                  id="firstName"
                   formControlName="firstName"
                   required
                   fxFlex="50"
@@ -173,8 +174,12 @@
       </mat-tab-group>
     </form>
   </mat-card-content>
+  <mat-card-actions> </mat-card-actions>
 
-  <mat-card-actions fxLayout="row-reverse">
+  <mat-card-actions fxLayout="row" fxLayoutAlign="space-between center">
+    <div>
+      <button mat-button color="accent">Employee Sign In</button>
+    </div>
     <div *ngIf="btnNextPrev.index == 0">
       <button
         mat-raised-button
