adding code comments

--- a/src/app/pages/security-question-create/security-question-create.component.html
+++ b/src/app/pages/security-question-create/security-question-create.component.html
@@ -1,3 +1,11 @@
+<!--
+// Title: Bob’s Computer Repair Shop
+// Date: 1 May 2022
+// Authors: Evan Durkin, Keith Hall,
+// Gustavo Roo Gonzalez, and Gunner Bradley
+// Description: TS file for creating a security question
+-->
+
 <div fxLayout="column">
   <mat-card class="mat-elevation-z8">
     <mat-card-title>Create Security Question</mat-card-title>
