--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -1,3 +1,11 @@
+<!--
+// Title: Bob’s Computer Repair Shop
+// Date: 22 April 2022
+// Authors: Evan Durkin, Keith Hall,
+// Gustavo Roo Gonzalez, and Gunner Bradley
+// Description: HTML file for sign-up page
+-->
+
 <mat-card class="signup-main">
   <mat-card-title class="signup-title mat-display-1"
     >Employee Account Registration</mat-card-title
