--- a/src/app/pages/user-create/user-create.component.html
+++ b/src/app/pages/user-create/user-create.component.html
@@ -1,13 +1,9 @@
 <!--
-/*
-============================================
 // Title: Bob’s Computer Repair Shop
 // Date: 21 April 2022
 // Authors: Evan Durkin, Keith Hall,
 // Gustavo Roo Gonzalez, and Gunner Bradley
-// Description: TS file for the user-create component.
-============================================
-*/
+// Description: HTML for the user-create component.
 -->
 
 <div fxLayout="column">
